--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
             <li class="nav-item active">
               <a class="nav-link" href="#">Manodrishti<span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item">
+           <!--  <li class="nav-item">
               <a class="nav-link" href="#">Link</a>
             </li>
             <li class="nav-item">
               <a class="nav-link disabled" href="#">Disabled</a>
-            </li>
+            </li> -->
           </ul>
           <form class="form-inline mt-2 mt-md-0">
             <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
